src/test/deca/syntax/invalid/className-instanceof.synt
className-instanceof.deca:1:
